@@ -1,4 +1,4 @@
-MANIFEST for cm_tools, version t19960825
+MANIFEST for cm_tools, version t19960924
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 COPYING                         copyright notice for CM_TOOLS
